tests/resource/valid/error/handle_var_usable_after.mamba
class MyErr(def message: Str): Exception

def function_may_throw_err() -> Int raise [MyErr] => 10

def a := function_may_throw_err() handle
    err: MyErr =>
        print("We have a problem: {err.message}.")
        20

print("a has value {a}.")
